PlayBanner.jsx 생성

--- a/src/components/VideoCard/VideoCard.module.css
+++ b/src/components/VideoCard/VideoCard.module.css
@@ -2,6 +2,12 @@
   border-radius: 1rem;
   overflow: hidden;
   cursor: pointer;
+  border: 0.2rem solid transparent;
+  transition: all 150ms ease-out;
+}
+
+.card.active {
+  border-color: white;
 }
 
 .img {
