--- a/src/components/PlayBanner/PlayBanner.module.css
+++ b/src/components/PlayBanner/PlayBanner.module.css
@@ -1,7 +1,7 @@
 .banner {
   background-color: var(--color-bg-body);
   width: 100%;
-  height: 600px;
+  height: 65%;
   display: flex;
   padding-left: 240px;
 }
@@ -17,7 +17,7 @@
 .title {
   color: var(--color-white);
   font-weight: bold;
-  font-size: 4rem;
+  font-size: 1rem;
   margin-bottom: 1rem;
 }
 
@@ -25,12 +25,30 @@
   background-color: var(--color-accent);
   color: var(--color-text);
   border: none;
-  font-size: 2rem;
+  font-size: 1rem;
   font-weight: bold;
   width: 50%;
   padding: 1rem 0;
   border-radius: 1rem;
   margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 150ms ease-out;
+}
+
+.playBtn:hover {
+  color: var(--color-white);
+}
+
+.playIcon {
+  opacity: 0;
+  transition: all 250ms ease-out;
+}
+
+.playBtn:hover .playIcon {
+  opacity: 1;
+  transform: translateX(100%);
 }
 
 .preview {
@@ -65,4 +83,31 @@
   width: 100%;
   height: 15%;
   background-color: var(--color-bg-body);
+}
+
+@media (min-width: 880px) {
+  .title {
+    font-size: 1.5rem;
+  }
+  .playBtn {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 1264px) {
+  .title {
+    font-size: 2rem;
+  }
+  .playBtn {
+    font-size: 2rem;
+  }
+}
+
+@media (min-width: 1776px) {
+  .title {
+    font-size: 4rem;
+  }
+  .playBtn {
+    font-size: 3rem;
+  }
 }
