--- a/src/components/VideoCard/VideoCard.module.css
+++ b/src/components/VideoCard/VideoCard.module.css
@@ -1,16 +1,20 @@
 .card {
   border-radius: 1rem;
-  overflow: hidden;
+  width: 95%;
+  margin: 0 auto;
   cursor: pointer;
   border: 0.2rem solid transparent;
   transition: all 150ms ease-out;
+  box-sizing: border-box;
 }
 
 .card.active {
   border-color: white;
 }
-
 .img {
-  width: 100%;
-  height: 100%;
+  transition: all 150ms ease-out;
+}
+
+.img:hover {
+  filter: brightness(110%);
 }
