--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
   height: 100vh;
+  overflow-y: hidden;
   background-color: var(--color-bg-body);
   color: var(--color-white);
 }
