--- a/src/components/PlayBanner/PlayBanner.module.css
+++ b/src/components/PlayBanner/PlayBanner.module.css
@@ -17,7 +17,7 @@
 .title {
   color: var(--color-white);
   font-weight: bold;
-  font-size: 1rem;
+  font-size: 1.5rem;
   margin-bottom: 1rem;
 }
 
@@ -39,16 +39,6 @@
 
 .playBtn:hover {
   color: var(--color-white);
-}
-
-.playIcon {
-  opacity: 0;
-  transition: all 250ms ease-out;
-}
-
-.playBtn:hover .playIcon {
-  opacity: 1;
-  transform: translateX(100%);
 }
 
 .preview {
@@ -93,19 +83,22 @@
 
 @media (min-width: 880px) {
   .title {
-    font-size: 1.5rem;
+    font-size: 2rem;
   }
   .playBtn {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
+  }
+  .playIcon {
+    margin-right: 1rem;
   }
 }
 
 @media (min-width: 1264px) {
   .title {
-    font-size: 2rem;
+    font-size: 3rem;
   }
   .playBtn {
-    font-size: 2rem;
+    font-size: 1.75rem;
   }
 }
 
@@ -114,6 +107,6 @@
     font-size: 4rem;
   }
   .playBtn {
-    font-size: 3rem;
+    font-size: 2rem;
   }
 }
