페이지 제목 스타일링 + icon 변경

--- a/src/components/NavHeader/NavHeader.module.css
+++ b/src/components/NavHeader/NavHeader.module.css
@@ -16,6 +16,11 @@
 }
 
 .title {
+  color: var(--color-white);
+  font-family: "Josefin Sans", sans-serif;
+}
+
+.point {
   color: var(--color-accent);
 }
 
