--- a/src/components/PlayBanner/PlayBanner.module.css
+++ b/src/components/PlayBanner/PlayBanner.module.css
@@ -1,40 +1,44 @@
 .banner {
   background-color: var(--color-bg-body);
-  width: 100%;
-  height: 65%;
   display: flex;
+  padding: 0;
+  margin: 0;
   padding-left: 240px;
+  width: 100%;
+  height: 60%;
 }
+
 .info {
-  width: 50%;
+  width: 40%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
 }
 
 .title {
   color: var(--color-white);
   font-weight: bold;
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
+  width: 50%;
+  margin: 0 0 2rem 8rem;
+  font-size: 4rem;
 }
 
 .playBtn {
   background-color: var(--color-accent);
   color: var(--color-text);
   border: none;
-  font-size: 1rem;
+  font-size: 2rem;
   font-weight: bold;
   width: 50%;
+  margin-left: 8rem;
   padding: 1rem 0;
   border-radius: 1rem;
-  margin-top: 1rem;
+  transition: all 150ms ease-out;
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: all 150ms ease-out;
+  cursor: pointer;
 }
 
 .playBtn:hover {
@@ -42,7 +46,7 @@
 }
 
 .preview {
-  width: 50%;
+  width: 60%;
   height: 100%;
   background-color: var(--color-bg-body);
   position: relative;
@@ -79,34 +83,4 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
-
-@media (min-width: 880px) {
-  .title {
-    font-size: 2rem;
-  }
-  .playBtn {
-    font-size: 1.25rem;
-  }
-  .playIcon {
-    margin-right: 1rem;
-  }
-}
-
-@media (min-width: 1264px) {
-  .title {
-    font-size: 3rem;
-  }
-  .playBtn {
-    font-size: 1.75rem;
-  }
-}
-
-@media (min-width: 1776px) {
-  .title {
-    font-size: 4rem;
-  }
-  .playBtn {
-    font-size: 2rem;
-  }
 }
